# matrix_synapse_automator_scripts

./: .gitignore  404.html  README.md  __init__.py  api_viewer.py  automation_helper.py  gbot_msgsender_script.py  index.html  invite_acceptor_script.py  invite_sender_script.py  listen_and_ai_reply.py  matrix-archive.py  message_collector_2023-12-11.txt  message_sender.py  messages_sync_script.py  mkdocs.yml  new_send.txt  objects.inv  pyproject.toml  room_data_extractor.py  room_leave_forget.py  to_send.txt  update_message_collector.py
docs/: how-to-guides.md  index.md  reference.md
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
tutorials/: index.html
